--- a/Readme.me
+++ b/Readme.me
@@ -1,1 +1,16 @@
-hih
+# Food Waste Prediction
+
+A simple machine learning project to predict food waste based on input features.
+
+## 📁 Files
+
+- `train_model.py`: Trains the machine learning model.
+- `predict_food_waste.py`: Uses the trained model to predict food waste.
+
+## 🚀 Getting Started
+
+### Clone the repository
+
+```bash
+git remote add origin https://github.com/Rishitha0320/Food-waste-identification.git
+
